[package]
name = "platformer"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.2.0"
bevy = "0.15.0"
bevy_ecs_ldtk = "0.11.0"
itertools = "0.13.0"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

